# rest-to-a2a-policy

./: .gitignore  LICENSE  README.md
docs/specs/: agent-ask-api.yaml
rest-to-a2a-definition/: README.md  exchange.json  gcl.yaml
rest-to-a2a-flex/: Cargo.toml  Makefile  README.md
rest-to-a2a-flex/docs/: how-to.md  rest-api-example.md  spec.md
rest-to-a2a-flex/playground/config/: api.yaml
rest-to-a2a-flex/playground/config/custom-policies/: note.txt
rest-to-a2a-flex/src/: a2a.rs  binding.rs  cache.rs  config_map.rs  continuation.rs  dataweave.rs  jsonrpc.rs  lib.rs  response_build.rs  select.rs
rest-to-a2a-flex/tests/: requests.rs
rest-to-a2a-flex/tests/common/: mod.rs  setup.rs
rest-to-a2a-flex/tests/config/: note.txt
